HEH-UI-194: budge alignment bug was fixed

--- a/heh-ui/src/app/components/layouts/home-layout/home-layout.component.scss
+++ b/heh-ui/src/app/components/layouts/home-layout/home-layout.component.scss
@@ -63,6 +63,10 @@
   }
 }
 
+.mat-nav-list .mat-list-item:nth-child(3){
+  position: relative;
+}
+
 @media (max-width: 950px) {
   .container {
     width: 90%;
@@ -74,42 +78,20 @@
     font-weight: bold;
     margin-bottom: 1.5rem;
   }
+
+  .mat-sidenav-container .mat-sidenav .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
+    left: 8rem;
+    top: 0.3rem;
+  }
 }
 
 @media (min-width: 768px) {
-  .mat-sidenav-container .mat-sidenav .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: 8.5rem;
-    top: 0.3rem;
-  }
-
-
-  .mat-sidenav-container {
-    .selectors,
-    mat-divider {
-      display: none;
-
-      app-language-selection,
-      app-profile,
-      app-select-background {
-        display: none;
-      }
-    }
-  }
-}
-
-@media (max-width: 600px) {
-  .mat-sidenav-container .mat-sidenav .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: 3.5rem;
-    top: 0.3rem;
+  .mat-sidenav-container .mat-sidenav, .mat-drawer-backdrop.mat-drawer-shown {
+    display: none;
   }
 }
 
 @media (max-width: 425px) {
-  .mat-sidenav-container .mat-sidenav .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: 4rem;
-    top: 0.3rem;
-  }
-
   .mat-sidenav-container .mat-drawer {
     width: 50vw;
   }
@@ -121,23 +103,7 @@
   }
 }
 
-@media (max-width: 400px) {
-  .mat-sidenav-container .mat-sidenav .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: 3.8rem;
-    top: 0.3rem;
-  }
-}
-
 @media screen and (max-width: 360px) {
-  .mat-sidenav-container .mat-sidenav .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: 3rem;
-    top: 0.2rem;
-  }
-  
-  .mat-sidenav-container .mat-drawer {
-    width: 50vw;
-  }
-
   .container .title {
     font-size: 1.5rem;
     margin-bottom: 1rem;
@@ -148,10 +114,5 @@
   .container .title {
     font-size: 1.4rem;
     margin-bottom: .8rem;
-  }
-    
-  .mat-sidenav-container .mat-sidenav .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
-    right: 1.8rem;
-    top: 0.3rem;
   }
 }
